{
  "version": 4,
  "terraform_version": "1.7.3",
  "serial": 30,
  "lineage": "22d95bb0-743f-a07c-ba9c-31493f85c5d2",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "mtc-nic2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/da0c5887-9e8b-43b3-83eb-5586c330a121/resourceGroups/mtc-rg2/providers/Microsoft.Network/networkInterfaces/mtc-nic2",
            "internal_domain_name_suffix": "1yi3ysves5perdqdwmms2d1nad.xx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.124.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/da0c5887-9e8b-43b3-83eb-5586c330a121/resourceGroups/mtc-rg2/providers/Microsoft.Network/publicIPAddresses/mtc-ip2",
                "subnet_id": "/subscriptions/da0c5887-9e8b-43b3-83eb-5586c330a121/resourceGroups/mtc-rg2/providers/Microsoft.Network/virtualNetworks/mtc-vn2/subnets/mtc-subnet2"
              }
            ],
            "location": "westus2",
            "name": "mtc-nic2",
            "private_ip_address": "10.124.1.4",
            "private_ip_addresses": [
              "10.124.1.4"
            ],
            "resource_group_name": "mtc-rg2",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_public_ip.mtc-ip2",
            "azurerm_resource_group.mtc-rg2",
            "azurerm_subnet.mtc-subnet2",
            "azurerm_virtual_network.mtc-vn2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "mtc-sg2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/da0c5887-9e8b-43b3-83eb-5586c330a121/resourceGroups/mtc-rg2/providers/Microsoft.Network/networkSecurityGroups/mtc-sg2",
            "location": "westus2",
            "name": "mtc-sg2",
            "resource_group_name": "mtc-rg2",
            "security_rule": [],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.mtc-rg2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "mtc-dev-rule2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "103.51.113.10/32",
            "destination_address_prefixes": null,
            "destination_application_security_group_ids": null,
            "destination_port_range": "*",
            "destination_port_ranges": null,
            "direction": "Inbound",
            "id": "/subscriptions/da0c5887-9e8b-43b3-83eb-5586c330a121/resourceGroups/mtc-rg2/providers/Microsoft.Network/networkSecurityGroups/mtc-sg2/securityRules/mtv-dev-rule2",
            "name": "mtv-dev-rule2",
            "network_security_group_name": "mtc-sg2",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "mtc-rg2",
            "source_address_prefix": "*",
            "source_address_prefixes": null,
            "source_application_security_group_ids": null,
            "source_port_range": "*",
            "source_port_ranges": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.mtc-sg2",
            "azurerm_resource_group.mtc-rg2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "mtc-ip2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/da0c5887-9e8b-43b3-83eb-5586c330a121/resourceGroups/mtc-rg2/providers/Microsoft.Network/publicIPAddresses/mtc-ip2",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "westus2",
            "name": "mtc-ip2",
            "resource_group_name": "mtc-rg2",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.mtc-rg2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "mtc-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.124.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/da0c5887-9e8b-43b3-83eb-5586c330a121/resourceGroups/mtc-rg2/providers/Microsoft.Network/virtualNetworks/mtc-vn2/subnets/mtc-subnet2",
            "name": "mtc-subnet2",
            "resource_group_name": "mtc-rg2",
            "virtual_network_name": "mtc-vn2"
          },
          "dependencies": [
            "azurerm_resource_group.mtc-rg2",
            "azurerm_virtual_network.mtc-vn2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "mtc-sga2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/da0c5887-9e8b-43b3-83eb-5586c330a121/resourceGroups/mtc-rg2/providers/Microsoft.Network/virtualNetworks/mtc-vn2/subnets/mtc-subnet2",
            "network_security_group_id": "/subscriptions/da0c5887-9e8b-43b3-83eb-5586c330a121/resourceGroups/mtc-rg2/providers/Microsoft.Network/networkSecurityGroups/mtc-sg2",
            "subnet_id": "/subscriptions/da0c5887-9e8b-43b3-83eb-5586c330a121/resourceGroups/mtc-rg2/providers/Microsoft.Network/virtualNetworks/mtc-vn2/subnets/mtc-subnet2"
          },
          "dependencies": [
            "azurerm_network_security_group.mtc-sg2",
            "azurerm_resource_group.mtc-rg2",
            "azurerm_subnet.mtc-subnet2",
            "azurerm_virtual_network.mtc-vn2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "mtc-vn2",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.124.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "4adc11de-97a4-48de-8e03-b3192e0f6d03",
            "id": "/subscriptions/da0c5887-9e8b-43b3-83eb-5586c330a121/resourceGroups/mtc-rg2/providers/Microsoft.Network/virtualNetworks/mtc-vn2",
            "location": "westus2",
            "name": "mtc-vn2",
            "resource_group_name": "mtc-rg2",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.mtc-rg2"
          ]
        }
      ]
    }
  ]
}